--- a/SOLID/SOLID.csproj
+++ b/SOLID/SOLID.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LiskovSubstitution\Problem\LSP.cs" />
+    <Compile Include="LiskovSubstitution\Solution\LSP.cs" />
     <Compile Include="OpenClosed\Problem\ImageCreator.cs" />
-    <Compile Include="OpenClosed\Solition\New.cs" />
+    <Compile Include="OpenClosed\Solution\New.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SingleResponsibility\User.cs" />
@@ -55,7 +57,6 @@
   <ItemGroup>
     <Folder Include="DependencyInversion\" />
     <Folder Include="InterfaceSegregation\" />
-    <Folder Include="LiskovSubstitution\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
